k8s/03-service-postgres.yaml
apiVersion: v1
kind: Service
metadata: { name: postgres, namespace: geo }
spec:
  clusterIP: None
  ports: [{ port: 5432, targetPort: 5432 }]
  selector: { app: postgres }
